--- a/css/components.css
+++ b/css/components.css
@@ -1983,6 +1983,7 @@ input:checked + .slider-premium:before {
     display: flex;
     width: 100%;
     height: 100%;
+    background: #0f172a;
 }
 
 .auth-left-side {
